[gd_scene load_steps=21 format=3 uid="uid://djwgkcg0f8rok"]

[ext_resource type="Texture2D" uid="uid://6beclxvljmm0" path="res://assets/images/ChatGPT Image Aug 13, 2025, 02_10_01 AM.png" id="1_tssx3"]
[ext_resource type="Script" uid="uid://b7exnj07p634w" path="res://scripts/level_selection_menu.gd" id="1_xivej"]
[ext_resource type="FontFile" uid="uid://b14yj6f0tuvtr" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_erkc0"]
[ext_resource type="Texture2D" uid="uid://cmfnnb7gj8i2k" path="res://assets/images/pixil-frame-0 (1).png" id="4_qece5"]
[ext_resource type="Texture2D" uid="uid://beqk2ccumslfk" path="res://assets/images/pixil-frame-0 (3).png" id="5_erkc0"]
[ext_resource type="Texture2D" uid="uid://cu341iy5fue0f" path="res://assets/images/pixil-frame-0 (4).png" id="6_qece5"]
[ext_resource type="Texture2D" uid="uid://bincjg4hdow5r" path="res://assets/images/mini_medal.png" id="7_8ikbu"]
[ext_resource type="FontFile" uid="uid://8je5juxgn1f2" path="res://assets/fonts/mac's Minecraft.ttf" id="8_5p8x8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_haryb"]
texture = ExtResource("1_tssx3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2kmca"]
texture = ExtResource("4_qece5")
modulate_color = Color(0.753984, 0.753984, 0.753984, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_totgr"]
texture = ExtResource("4_qece5")
modulate_color = Color(0.355314, 0.355314, 0.355314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ty4yg"]
texture = ExtResource("4_qece5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b730w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kqfvb"]
texture = ExtResource("5_erkc0")
modulate_color = Color(0.803922, 0.803922, 0.803922, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b730w"]
texture = ExtResource("5_erkc0")
modulate_color = Color(0.517184, 0.517184, 0.517185, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qece5"]
texture = ExtResource("5_erkc0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4hd5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_erkc0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gep0b"]
texture = ExtResource("5_erkc0")
modulate_color = Color(0.803922, 0.803922, 0.803922, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p0s06"]
texture = ExtResource("6_qece5")
modulate_color = Color(0.720467, 0.720468, 0.720467, 1)

[node name="LevelSelectionMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xivej")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_haryb")

[node name="BackButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -584.0
offset_top = 48.0
offset_right = -429.0
offset_bottom = 133.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_2kmca")
theme_override_styles/pressed = SubResource("StyleBoxTexture_totgr")
theme_override_styles/hover = SubResource("StyleBoxTexture_ty4yg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b730w")
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -272.0
offset_right = 136.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_font_sizes/font_size = 25
text = "Select Level"

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 184.0
offset_right = 523.0
offset_bottom = 344.0
size_flags_horizontal = 7
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_styles/normal = SubResource("StyleBoxTexture_kqfvb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_b730w")
theme_override_styles/hover = SubResource("StyleBoxTexture_qece5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v4hd5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_erkc0")
text = "Level 1
"

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 752.0
offset_top = 184.0
offset_right = 1027.0
offset_bottom = 344.0
size_flags_horizontal = 7
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_styles/normal = SubResource("StyleBoxTexture_kqfvb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_b730w")
theme_override_styles/hover = SubResource("StyleBoxTexture_qece5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v4hd5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_erkc0")
text = "Level 2"

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 448.0
offset_right = 523.0
offset_bottom = 608.0
size_flags_horizontal = 7
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_styles/normal = SubResource("StyleBoxTexture_kqfvb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_b730w")
theme_override_styles/hover = SubResource("StyleBoxTexture_qece5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v4hd5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_erkc0")
text = "Level 3"

[node name="Button4" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 752.0
offset_top = 448.0
offset_right = 1027.0
offset_bottom = 608.0
size_flags_horizontal = 7
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_erkc0")
theme_override_styles/normal = SubResource("StyleBoxTexture_gep0b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qece5")
theme_override_styles/hover = SubResource("StyleBoxTexture_qece5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v4hd5")
text = "Level 4"

[node name="lvl2locked" type="Panel" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 184.0
offset_right = 1027.0
offset_bottom = 344.0
theme_override_styles/panel = SubResource("StyleBoxTexture_p0s06")

[node name="lvl3locked" type="Panel" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 448.0
offset_right = 523.0
offset_bottom = 608.0
theme_override_styles/panel = SubResource("StyleBoxTexture_p0s06")

[node name="lvl4locked" type="Panel" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 448.0
offset_right = 1027.0
offset_bottom = 608.0
theme_override_styles/panel = SubResource("StyleBoxTexture_p0s06")

[node name="Lvl1Completion" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeResult1" type="Label" parent="Lvl1Completion"]
visible = false
layout_mode = 0
offset_left = 424.0
offset_top = 352.00003
offset_right = 584.0
offset_bottom = 388.00003
scale = Vector2(0.5212576, 0.5212576)
theme_override_fonts/font = ExtResource("8_5p8x8")
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 3

[node name="lvl1medal3" type="Sprite2D" parent="Lvl1Completion"]
visible = false
position = Vector2(264, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 25, 42, 16)

[node name="lvl1medal2" type="Sprite2D" parent="Lvl1Completion"]
visible = false
position = Vector2(264, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 46, 27, 16)

[node name="lvl1medal1" type="Sprite2D" parent="Lvl1Completion"]
visible = false
position = Vector2(264, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 65, 12, 17)

[node name="Lvl2Completion" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeResult2" type="Label" parent="Lvl2Completion"]
visible = false
layout_mode = 0
offset_left = 928.0
offset_top = 352.00003
offset_right = 1088.0
offset_bottom = 388.00003
scale = Vector2(0.5212576, 0.5212576)
theme_override_fonts/font = ExtResource("8_5p8x8")
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 3

[node name="lvl2medal3" type="Sprite2D" parent="Lvl2Completion"]
visible = false
position = Vector2(768, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 25, 42, 16)

[node name="lvl2medal2" type="Sprite2D" parent="Lvl2Completion"]
visible = false
position = Vector2(768, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 46, 27, 16)

[node name="lvl2medal1" type="Sprite2D" parent="Lvl2Completion"]
visible = false
position = Vector2(768, 328)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 65, 12, 17)

[node name="Lvl3Completion" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeResult3" type="Label" parent="Lvl3Completion"]
visible = false
layout_mode = 0
offset_left = 424.0
offset_top = 616.0
offset_right = 584.0
offset_bottom = 652.0
scale = Vector2(0.5212576, 0.5212576)
theme_override_fonts/font = ExtResource("8_5p8x8")
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 3

[node name="lvl3medal3" type="Sprite2D" parent="Lvl3Completion"]
visible = false
position = Vector2(264.00003, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 25, 42, 16)

[node name="lvl3medal2" type="Sprite2D" parent="Lvl3Completion"]
visible = false
position = Vector2(264.00003, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 46, 27, 16)

[node name="lvl3 medal1" type="Sprite2D" parent="Lvl3Completion"]
visible = false
position = Vector2(264.00003, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 65, 12, 17)

[node name="Lvl4Completion" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeResult4" type="Label" parent="Lvl4Completion"]
visible = false
layout_mode = 0
offset_left = 928.0
offset_top = 616.0
offset_right = 1088.0
offset_bottom = 652.0
scale = Vector2(0.5212576, 0.5212576)
theme_override_fonts/font = ExtResource("8_5p8x8")
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 3

[node name="lvl4medal3" type="Sprite2D" parent="Lvl4Completion"]
visible = false
position = Vector2(768, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 25, 42, 16)

[node name="lvl4medal2" type="Sprite2D" parent="Lvl4Completion"]
visible = false
position = Vector2(768, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 46, 27, 16)

[node name="lvl4 medal1" type="Sprite2D" parent="Lvl4Completion"]
visible = false
position = Vector2(768, 592)
scale = Vector2(3.1, 3.1)
texture = ExtResource("7_8ikbu")
centered = false
region_enabled = true
region_rect = Rect2(29, 65, 12, 17)

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
